[package]
name = "rusty_pathfinding"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
rand = "0.8"
winit = "0.28.6"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
